[package]
name = "repo-hub"
version = "0.1.0"
edition = "2021"
description = "A simple program to list the status of all git repositories under a directory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.3"
to_vec = "0.1.0"
getopts = "0.2.21"
clap = { version = "4.5.4", features = ["derive"] }
ratatui = "0.26.3"
crossterm = "0.27.0"

[[bin]]
name = "repohub"
version = "0.1.0"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
