[package]
name = "repolice"
version = "0.1.0"
edition = "2021"
description = "TUI that lists the status of all git repositories under a directory tree, use `-h` to view help..."

[dependencies]
regex = "1.7.3"
to_vec = "0.1.0"
getopts = "0.2.21"
clap = { version = "4.5.4", features = ["derive"] }

[[bin]]
name = "repolice"
version = "0.1.0"
path = "src/main.rs"
