[package]
name = "repolice"
version = "0.0.1"
edition = "2024"
description = "TUI that lists the status of all git repositories under a directory tree, use `-h` to view help..."

[dependencies]
regex = "1.7.3"
to_vec = "0.1.0"
getopts = "0.2.21"
clap = { version = "4.5.4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.27"

[[bin]]
name = "repolice"
version = "0.0.1"
path = "src/main.rs"
